FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/Account_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Country__c</fullName>
    <description>Twinned from Quote Line</description>
    <inlineHelpText>Account Country of the Subscription&apos;s Ship To Account</inlineHelpText>
    <label>Account Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Country</valueSetName>
    </valueSet>
</CustomField>