FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/Adjusted_Rate_Percent__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Rate_Percent__c</fullName>
    <description>BOPI-337 needed for data migration. Adjusted usage rate % applied during quoting</description>
    <label>Adjusted Rate (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>