FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/AQS_Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>AQS_Effective_End_Date__c</fullName>
    <description>Effective End Date, looking first at Segment End Date (if MDQ line), and if not, the standard End Date field</description>
    <formula>BLANKVALUE( SBQQ__SegmentEndDate__c ,  SBQQ__EndDate__c )</formula>
    <inlineHelpText>Effective End Date, looking first at Segment End Date (if MDQ line), and if not, the standard End Date field</inlineHelpText>
    <label>Effective End Date</label>
    <type>Date</type>
</CustomField>