FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/AQS_Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>AQS_Effective_Start_Date__c</fullName>
    <description>Effective Start Date, looking first at Segment Start Date (if MDQ line), and if not, the standard Start Date field</description>
    <formula>BLANKVALUE( SBQQ__SegmentStartDate__c ,  SBQQ__StartDate__c )</formula>
    <inlineHelpText>Effective Start Date, looking first at Segment Start Date (if MDQ line), and if not, the standard Start Date field</inlineHelpText>
    <label>Effective Start Date</label>
    <type>Date</type>
</CustomField>