FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/CC_Country__c.field-meta.xml
<CustomField>
    <fullName>CC_Country__c</fullName>
    <description>Created for BOPI-345</description>
    <inlineHelpText>Used to get CC Country value from Quote Line to Subscription</inlineHelpText>
    <label>CC Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Locally Issued</fullName>
            </value>
            <value>
                <fullName>Non-Locally Issued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>