FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/CPQ_Subscription_External_Migration_Id__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Subscription_External_Migration_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>For CPQ data migration only</description>
    <externalId>true</externalId>
    <label>CPQ Subscription External Migration Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>