FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/Estimated_Volume__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Volume__c</fullName>
    <description>Created for BOPI-345</description>
    <inlineHelpText>Total number of estimate usage based products</inlineHelpText>
    <label>Estimated Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>