FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/Implementation_Date__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Date__c</fullName>
    <description>Twinned from Order Product</description>
    <inlineHelpText>Date the (first) platform implementation for this Subscription is complete</inlineHelpText>
    <label>Implementation Date</label>
    <type>Date</type>
</CustomField>