FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/Line_Description__c.field-meta.xml
<CustomField>
    <fullName>Line_Description__c</fullName>
    <description>Created for BOPI-345</description>
    <inlineHelpText>Shows the surcharge amount that will appear on the Legal Documents</inlineHelpText>
    <label>Line Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>