FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/Non_Local_Currency__c.field-meta.xml
<CustomField>
    <fullName>Non_Local_Currency__c</fullName>
    <description>BOPI - 343 used in price rule lookup for Attribute Code</description>
    <inlineHelpText>Is this for the Account&apos;s local currency?</inlineHelpText>
    <label>Non-Local Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>