FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/NS_Billing_Price__c.field-meta.xml
<CustomField>
    <fullName>NS_Billing_Price__c</fullName>
    <description>SALDEV-914 Copies the NS Billing Price from Quote Line for Price Rule formula if a quote exists. Otherwise it copies the Customer Price from subscription (for migrated records without quotes)</description>
    <formula>IF(NOT(ISNULL(SBQQ__QuoteLine__r.NS_Billing_Price__c)),SBQQ__QuoteLine__r.NS_Billing_Price__c,
SBQQ__CustomerPrice__c )</formula>
    <inlineHelpText>Billing price sent to Netsuite for invoicing</inlineHelpText>
    <label>NS Billing Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>