FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/NS_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_ID__c</fullName>
    <description>NS Subscription record id. Used by integration to link CPQ Orders to NS Subscriptions. Used in NS Sub Group Id field concatenation. BOPI-345</description>
    <inlineHelpText>NS Line Item Id, corresponds to this SF Subscription</inlineHelpText>
    <label>NS Line Item ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>