FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/NS_Item_Code__c.field-meta.xml
<CustomField>
    <fullName>NS_Item_Code__c</fullName>
    <description>Created for BOPI-345</description>
    <inlineHelpText>Needed for NetSuite Integration</inlineHelpText>
    <label>NS Item Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>