FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/NS_Next_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>NS_Next_Bill_Date__c</fullName>
    <description>Created for BOPI-345</description>
    <formula>SBQQ__OrderProduct__r.NS_Next_Bill_Date__c</formula>
    <inlineHelpText>Pulls the NS Next Bill Date from the related Order Product field of the same name</inlineHelpText>
    <label>NS Next Bill Date</label>
    <type>Date</type>
</CustomField>