FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/NS_Next_Bill_Type__c.field-meta.xml
<CustomField>
    <fullName>NS_Next_Bill_Type__c</fullName>
    <description>Created for BOPI-345</description>
    <inlineHelpText>Used for calculating NS Invoicing date</inlineHelpText>
    <label>NS Next Bill Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NS_Next_Bill_Type</valueSetName>
    </valueSet>
</CustomField>