FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/NS_Usage_Rate__c.field-meta.xml
<CustomField>
    <fullName>NS_Usage_Rate__c</fullName>
    <description>Created for SALDEV-1026.</description>
    <formula>SBQQ__OrderProduct__r.NS_Usage_Rate__c</formula>
    <label>NS Usage Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>