FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/Opportunity_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Line_Id__c</fullName>
    <description>Created from JIRA ticket: BOPI-179.</description>
    <label>Opportunity Line Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>