FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <description>Field to better distinguish the type of relationship this Opp has to our Partner. To work with the &apos;Partner Name&apos; which used to be Referred by Partner. Twinned from Quote Line BOPI-512</description>
    <inlineHelpText>Field to better distinguish the type of relationship this Opp has to our Partner. To work with the &apos;Partner Name&apos; which used to be Referred by Partner. Twinned from Quote Line BOPI-512</inlineHelpText>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Partner_Type</valueSetName>
    </valueSet>
</CustomField>