FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName>
    <description>BOPI-337, set during quoting and sent to NS</description>
    <inlineHelpText>Who will pay for this product/service</inlineHelpText>
    <label>Payer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payer</valueSetName>
    </valueSet>
</CustomField>