FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/Platform_IDs__c.field-meta.xml
<CustomField>
    <fullName>Platform_IDs__c</fullName>
    <description>Twinned from Order Product</description>
    <inlineHelpText>Platform ID(s) for this Subscription</inlineHelpText>
    <label>Platform IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>