FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <description>Created for SALDEV-1065. Background field used in Product Rules</description>
    <formula>SBQQ__Product__r.ProductCode</formula>
    <label>ProductCode</label>
    <type>Text</type>
</CustomField>