FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/Quoted_Usage_Amt__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Usage_Amt__c</fullName>
    <description>Created for BOPI-345</description>
    <formula>SBQQ__QuoteLine__r.Quoted_Usage_Amt__c</formula>
    <inlineHelpText>Used to get the value of the field from related Quote Line</inlineHelpText>
    <label>Quoted Usage Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>