FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/Quoted_Usage_Percent__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Usage_Percent__c</fullName>
    <description>Created for BOPI-345</description>
    <formula>SBQQ__QuoteLine__r.Quoted_Usage_Percent__c</formula>
    <inlineHelpText>Used to twin the value of the related Quote Lines &quot;Quoted Usage %&quot; field</inlineHelpText>
    <label>Quoted Usage %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>