FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/Refer_Resell_Partner__c.field-meta.xml
<CustomField>
    <fullName>Refer_Resell_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to better distinguish the type of relationship this Opp has to our Partner. To work with the &apos;Partner Name&apos; which used to be Referred by Partner. Twinned from Quote Line BOPI-512</description>
    <inlineHelpText>Field to better distinguish the type of relationship this Opp has to our Partner. To work with the &apos;Partner Name&apos; which used to be Referred by Partner. Twinned from Quote Line BOPI-512</inlineHelpText>
    <label>Refer/Resell Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Subscriptions (Refer/Resell Partner)</relationshipLabel>
    <relationshipName>Subscriptions1</relationshipName>
    <type>Lookup</type>
</CustomField>