FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/Rev_Share__c.field-meta.xml
<CustomField>
    <fullName>Rev_Share__c</fullName>
    <description>Created for BOPI-345</description>
    <formula>SBQQ__QuoteLine__r.Rev_Share__c</formula>
    <inlineHelpText>Used to determine if a quote needs to be submitted to Revenue team for approval</inlineHelpText>
    <label>Rev Share</label>
    <type>Checkbox</type>
</CustomField>