FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/Separate_Entity__c.field-meta.xml
<CustomField>
    <fullName>Separate_Entity__c</fullName>
    <description>Created for BOPI-345</description>
    <formula>SBQQ__QuoteLine__r.Separate_Entity__c</formula>
    <inlineHelpText>Used to pull the Separate Entity value from related Quote Line</inlineHelpText>
    <label>Separate Entity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>