FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/Ship_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created for BOPI-345</description>
    <inlineHelpText>Used to twin the Ship to Account from Quote Line to Subscription</inlineHelpText>
    <label>Ship To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Subscriptions (Ship To Account)</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>