FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/SubscriptionLongId__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionLongId__c</fullName>
    <description>18 Character ID for easy Excel Vlookup</description>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>18 Character ID for easy Excel Vlookup</inlineHelpText>
    <label>SubscriptionLongId</label>
    <type>Text</type>
</CustomField>