FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/Surcharging__c.field-meta.xml
<CustomField>
    <fullName>Surcharging__c</fullName>
    <description>Twins from Quote Lines, needed for amend and renew</description>
    <inlineHelpText>Is Surcharging quoted for this Subscription</inlineHelpText>
    <label>Surcharging</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>