FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/TEMP_NS_Sub_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>TEMP_NS_Sub_Group_Id__c</fullName>
    <description>Temporary field used in Data Migration, will be deprecated DO NOT DEPLOY TO PRODUCTION</description>
    <inlineHelpText>Temporary field used in Data Migration, will be deprecated DO NOT DEPLOY TO PRODUCTION</inlineHelpText>
    <label>TEMP NS Sub Group Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>