FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/Transaction_Currency__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Currency__c</fullName>
    <description>Used to twin value from Currency field on Quote Line to Subscription</description>
    <inlineHelpText>Used to twin value from Currency field on Quote Line to Subscription</inlineHelpText>
    <label>Transaction Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Transaction_Currencies</valueSetName>
    </valueSet>
</CustomField>