FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/Usage_Rate__c.field-meta.xml
<CustomField>
    <fullName>Usage_Rate__c</fullName>
    <description>BOPI-337, needed for data migration. Standard usage rates applied during quoting</description>
    <inlineHelpText>Standard Usage Rate %</inlineHelpText>
    <label>Usage Rate %</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>