FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/Usage_Rate_Amt__c.field-meta.xml
<CustomField>
    <fullName>Usage_Rate_Amt__c</fullName>
    <description>BOPI-337, needed for data migration. Standard usage rate applied during quoting</description>
    <inlineHelpText>Standard usage rate amount</inlineHelpText>
    <label>Usage Rate Amt</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>