FLY wire David/force-app/main/default/objects/SBQQ__Subscription__c/fields/Usage_Type__c.field-meta.xml
<CustomField>
    <fullName>Usage_Type__c</fullName>
    <description>Created for BOPI-188</description>
    <inlineHelpText>Used to hold an attribute value for usage based pricing</inlineHelpText>
    <label>Usage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Usage_Type</valueSetName>
    </valueSet>
</CustomField>